--- a/home.css
+++ b/home.css
@@ -20,8 +20,8 @@ body {
 }
 
 h1 {
-    font-size: 2em;
-    color: #ff66b2;
+    font-size: 2.5em;
+    color: #fe2792;
     margin-bottom: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
